fixes white space between home and projects backgrounds

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,10 @@ html, body,
     text-align: center;
     position: relative;
     background-position: top center;
-    background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
-#home, #projects, #contact, #modal_video_container iframe {
+#projects, #contact, #modal_video_container iframe {
     -webkit-box-shadow: 0px 0px 10px 5px #888888;
     -moz-box-shadow: 0px 0px 10px 5px #888888;
     box-shadow: 0px 0px 10px 5px #888888;
@@ -50,6 +49,7 @@ iframe {
 }
 #projects {
     background-image: url(../img/bg2.png);
+    overflow:auto;
 }
 #contact {
     background-image: url(../img/bg3.png);
@@ -105,9 +105,6 @@ p {
     background: none;
     text-decoration: underline;
 }
-.page_text {
-    display: inline-block;
-}
 #project_item {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -119,4 +116,7 @@ p {
 }
 #project_item p {
     font-size: 22px;
+}
+#projects h2 {
+    padding-top: 100px;
 }
